# template-rust-bevy

./: Cargo.toml
src/: camera.rs  common.rs  main.rs  state.rs
