[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["Barlog <barlog@tanelorn.li>"]
edition = "2024"

[dependencies]
bevy = { version = "0.15", features = ["wayland"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
opt-level = 'z'
panic = 'abort'
